Go back to Java 8 for compatibility with Doxia