@@ -1,18 +1,20 @@
 package org.asciidoctor.maven;
 
+import static org.asciidoctor.maven.AsciidoctorAsserter.assertThat;
+import static org.asciidoctor.maven.TestUtils.mockAsciidoctorMojo;
+import static org.asciidoctor.maven.TestUtils.ResourceBuilder.excludeAll;
+import static org.asciidoctor.maven.io.TestFilesHelper.newOutputTestDirectory;
+
+import java.io.File;
+import java.util.Map;
+
 import org.apache.maven.plugin.MojoExecutionException;
 import org.apache.maven.plugin.MojoFailureException;
 import org.assertj.core.api.Assertions;
 import org.junit.jupiter.api.Disabled;
 import org.junit.jupiter.api.Test;
 
-import java.io.File;
-import java.util.Map;
-
-import static org.asciidoctor.maven.AsciidoctorAsserter.assertThat;
-import static org.asciidoctor.maven.TestUtils.ResourceBuilder.excludeAll;
-import static org.asciidoctor.maven.TestUtils.mockAsciidoctorMojo;
-import static org.asciidoctor.maven.io.TestFilesHelper.newOutputTestDirectory;
+import com.google.common.collect.ImmutableMap;
 
 /**
  * Opinionated tests to validate Asciidoctor behaviours in end-to-end scenarios.
@@ -31,7 +33,7 @@ class AsciidoctorIntegrationTest {
         // when
         AsciidoctorMojo mojo = mockAsciidoctorMojo();
         mojo.backend = "html";
-        mojo.attributes = Map.of("attribute-missing", "skip");
+        mojo.attributes = ImmutableMap.of("attribute-missing", "skip");
         mojo.sourceDocumentName = "attribute-missing.adoc";
         mojo.sourceDirectory = srcDir;
         mojo.outputDirectory = outputDir;
@@ -51,7 +53,7 @@ class AsciidoctorIntegrationTest {
         // when
         AsciidoctorMojo mojo = mockAsciidoctorMojo();
         mojo.backend = "html";
-        mojo.attributes = Map.of("attribute-missing", "drop");
+        mojo.attributes = ImmutableMap.of("attribute-missing", "drop");
         mojo.sourceDirectory = srcDir;
         mojo.sourceDocumentName = "attribute-missing.adoc";
         mojo.outputDirectory = outputDir;
@@ -72,7 +74,7 @@ class AsciidoctorIntegrationTest {
         // when
         AsciidoctorMojo mojo = mockAsciidoctorMojo();
         mojo.backend = "html";
-        mojo.attributes = Map.of("attribute-missing", "drop-line");
+        mojo.attributes = ImmutableMap.of("attribute-missing", "drop-line");
         mojo.sourceDocumentName = "attribute-missing.adoc";
         mojo.sourceDirectory = srcDir;
         mojo.outputDirectory = outputDir;
@@ -93,7 +95,7 @@ class AsciidoctorIntegrationTest {
         // when
         AsciidoctorMojo mojo = mockAsciidoctorMojo();
         mojo.backend = "html5";
-        mojo.attributes = Map.of("attribute-undefined", "drop");
+        mojo.attributes = ImmutableMap.of("attribute-undefined", "drop");
         mojo.sourceDocumentName = "attribute-undefined.adoc";
         mojo.sourceDirectory = srcDir;
         mojo.outputDirectory = outputDir;
@@ -114,7 +116,7 @@ class AsciidoctorIntegrationTest {
         // when
         AsciidoctorMojo mojo = mockAsciidoctorMojo();
         mojo.backend = "html5";
-        mojo.attributes = Map.of("attribute-undefined", "drop-line");
+        mojo.attributes = ImmutableMap.of("attribute-undefined", "drop-line");
         mojo.sourceDocumentName = "attribute-undefined.adoc";
         mojo.outputDirectory = outputDir;
         mojo.sourceDirectory = srcDir;
@@ -135,7 +137,7 @@ class AsciidoctorIntegrationTest {
         // when
         AsciidoctorMojo mojo = mockAsciidoctorMojo();
         mojo.backend = "html";
-        mojo.attributes = Map.of("source-highlighter", "coderay");
+        mojo.attributes = ImmutableMap.of("source-highlighter", "coderay");
         mojo.sourceDocumentName = "main-document.adoc";
         mojo.sourceDirectory = srcDir;
         mojo.outputDirectory = outputDir;
@@ -155,7 +157,7 @@ class AsciidoctorIntegrationTest {
         // when
         AsciidoctorMojo mojo = mockAsciidoctorMojo();
         mojo.backend = "html";
-        mojo.attributes = Map.of("source-highlighter", "highlight.js");
+        mojo.attributes = ImmutableMap.of("source-highlighter", "highlight.js");
         mojo.sourceDocumentName = "main-document.adoc";
         mojo.sourceDirectory = srcDir;
         mojo.outputDirectory = outputDir;
@@ -176,7 +178,7 @@ class AsciidoctorIntegrationTest {
         // when
         AsciidoctorMojo mojo = mockAsciidoctorMojo();
         mojo.backend = "html";
-        mojo.attributes = Map.of("source-highlighter", "prettify");
+        mojo.attributes = ImmutableMap.of("source-highlighter", "prettify");
         mojo.sourceDocumentName = "main-document.adoc";
         mojo.sourceDirectory = srcDir;
         mojo.outputDirectory = outputDir;
@@ -198,7 +200,7 @@ class AsciidoctorIntegrationTest {
         // when
         AsciidoctorMojo mojo = mockAsciidoctorMojo();
         mojo.backend = "html";
-        mojo.attributes = Map.of(
+        mojo.attributes = ImmutableMap.of(
                 "source-highlighter", "pygments",
                 "pygments-style", "monokai",
                 "pygments-linenums-mode", "inline");
@@ -242,7 +244,7 @@ class AsciidoctorIntegrationTest {
         // when
         AsciidoctorMojo mojo = mockAsciidoctorMojo();
         mojo.backend = "html5";
-        mojo.attributes = Map.of("source-highlighter", "nonExistent");
+        mojo.attributes = ImmutableMap.of("source-highlighter", "nonExistent");
         mojo.sourceDocumentName = "main-document.adoc";
         mojo.sourceDirectory = srcDir;
         mojo.outputDirectory = outputDir;
@@ -283,7 +285,7 @@ class AsciidoctorIntegrationTest {
         // when
         AsciidoctorMojo mojo = mockAsciidoctorMojo();
         mojo.sourceDocumentName = documentName;
-        mojo.attributes = Map.of("allow-uri-read", "true");
+        mojo.attributes = ImmutableMap.of("allow-uri-read", "true");
         mojo.backend = "html5";
         mojo.sourceDirectory = srcDir;
         mojo.outputDirectory = outputDir;
@@ -305,7 +307,7 @@ class AsciidoctorIntegrationTest {
         // when
         AsciidoctorMojo mojo = mockAsciidoctorMojo();
         mojo.backend = "html5";
-        mojo.attributes = Map.of("allow-uri-read", "false");
+        mojo.attributes = ImmutableMap.of("allow-uri-read", "false");
         mojo.sourceDirectory = srcDir;
         mojo.sourceDocumentName = documentName;
         mojo.outputDirectory = outputDir;
@@ -358,7 +360,7 @@ class AsciidoctorIntegrationTest {
         mojo.sourceDocumentName = "book.adoc";
         mojo.outputDirectory = outputDir;
         mojo.standalone = true;
-        mojo.attributes = Map.of("linkcss", "", "copycss!", "");
+        mojo.attributes = ImmutableMap.of("linkcss", "", "copycss!", "");
         mojo.execute();
 
         // then
