@@ -1,23 +1,31 @@
 package org.asciidoctor.maven;
 
-import lombok.SneakyThrows;
-import org.apache.maven.plugin.MojoExecutionException;
-import org.apache.maven.plugin.MojoFailureException;
-import org.asciidoctor.maven.extensions.ExtensionConfiguration;
-import org.asciidoctor.maven.io.ConsoleHolder;
-import org.asciidoctor.maven.test.processors.*;
-import org.assertj.core.api.Assertions;
-import org.junit.jupiter.api.Disabled;
-import org.junit.jupiter.api.Test;
-
-import java.io.File;
-import java.util.Arrays;
-import java.util.Map;
-
 import static java.util.Collections.singletonList;
 import static org.asciidoctor.maven.TestUtils.mockAsciidoctorMojo;
 import static org.asciidoctor.maven.io.TestFilesHelper.newOutputTestDirectory;
 import static org.assertj.core.api.Assertions.assertThat;
+
+import java.io.File;
+import java.util.Arrays;
+
+import org.apache.maven.plugin.MojoExecutionException;
+import org.apache.maven.plugin.MojoFailureException;
+import org.asciidoctor.maven.extensions.ExtensionConfiguration;
+import org.asciidoctor.maven.io.ConsoleHolder;
+import org.asciidoctor.maven.test.processors.ChangeAttributeValuePreprocessor;
+import org.asciidoctor.maven.test.processors.FailingPreprocessor;
+import org.asciidoctor.maven.test.processors.GistBlockMacroProcessor;
+import org.asciidoctor.maven.test.processors.ManpageInlineMacroProcessor;
+import org.asciidoctor.maven.test.processors.MetaDocinfoProcessor;
+import org.asciidoctor.maven.test.processors.UriIncludeProcessor;
+import org.asciidoctor.maven.test.processors.YellBlockProcessor;
+import org.assertj.core.api.Assertions;
+import org.junit.jupiter.api.Disabled;
+import org.junit.jupiter.api.Test;
+
+import com.google.common.collect.ImmutableMap;
+
+import lombok.SneakyThrows;
 
 /**
  * Specific tests to validate usage of AsciidoctorJ extension in AsciidoctorMojo.
@@ -139,7 +147,7 @@ class AsciidoctorMojoExtensionsTest {
         mojo.sourceDocumentName = "processors-sample.adoc";
         mojo.outputDirectory = outputDir;
         mojo.standalone = true;
-        mojo.attributes = Map.of("toc", "");
+        mojo.attributes = ImmutableMap.of("toc", "");
         mojo.extensions = singletonList(extensionConfiguration("org.asciidoctor.maven.test.processors." + extensionClassName));
         mojo.execute();
         // then
@@ -340,7 +348,7 @@ class AsciidoctorMojoExtensionsTest {
         mojo.sourceDocumentName = "processors-sample.adoc";
         mojo.outputDirectory = outputDir;
         mojo.standalone = true;
-        mojo.attributes = Map.of("toc", "",
+        mojo.attributes = ImmutableMap.of("toc", "",
                 "linkcss", "",
                 "copycss!", "");
         mojo.extensions = Arrays.asList(
@@ -378,7 +386,7 @@ class AsciidoctorMojoExtensionsTest {
         mojo.sourceDocumentName = "processors-sample.adoc";
         mojo.outputDirectory = outputDir;
         mojo.standalone = true;
-        mojo.attributes = Map.of("toc", null, "linkcss!", "");
+        mojo.attributes = ImmutableMap.of("toc", null, "linkcss!", "");
         mojo.execute();
         // then
         AsciidoctorAsserter.assertThat(outputDir, "processors-sample.html")
