@@ -1,26 +1,39 @@
 package org.asciidoctor.maven;
 
-import lombok.SneakyThrows;
+import static java.util.Collections.singletonList;
+import static org.asciidoctor.maven.AsciidoctorAsserter.assertThat;
+import static org.asciidoctor.maven.TestUtils.assertEqualsStructure;
+import static org.asciidoctor.maven.TestUtils.mockAsciidoctorMojo;
+import static org.asciidoctor.maven.TestUtils.writeToFile;
+import static org.asciidoctor.maven.TestUtils.ResourceBuilder.excludeAll;
+import static org.asciidoctor.maven.io.TestFilesHelper.newOutputTestDirectory;
+
+import java.io.ByteArrayOutputStream;
+import java.io.File;
+import java.io.IOException;
+import java.io.OutputStream;
+import java.io.PrintStream;
+import java.nio.file.Files;
+import java.nio.file.Path;
+import java.util.Arrays;
+import java.util.Collection;
+import java.util.List;
+import java.util.UUID;
+import java.util.stream.Collectors;
+
 import org.apache.commons.io.FileUtils;
 import org.apache.maven.plugin.MojoExecutionException;
 import org.apache.maven.plugin.MojoFailureException;
+import org.asciidoctor.maven.TestUtils.ResourceBuilder;
 import org.asciidoctor.maven.extensions.ExtensionConfiguration;
 import org.asciidoctor.maven.io.ConsoleHolder;
 import org.asciidoctor.maven.test.processors.RequireCheckerTreeprocessor;
 import org.assertj.core.api.Assertions;
 import org.junit.jupiter.api.Test;
 
-import java.io.*;
-import java.nio.file.Files;
-import java.nio.file.Path;
-import java.util.*;
-import java.util.stream.Collectors;
+import com.google.common.collect.ImmutableMap;
 
-import static java.util.Collections.singletonList;
-import static org.asciidoctor.maven.AsciidoctorAsserter.assertThat;
-import static org.asciidoctor.maven.TestUtils.*;
-import static org.asciidoctor.maven.TestUtils.ResourceBuilder.excludeAll;
-import static org.asciidoctor.maven.io.TestFilesHelper.newOutputTestDirectory;
+import lombok.SneakyThrows;
 
 
 class AsciidoctorMojoTest {
@@ -157,7 +170,7 @@ class AsciidoctorMojoTest {
         mojo.resources = excludeAll();
         mojo.outputDirectory = outputDir;
         mojo.standalone = true;
-        mojo.attributes = Map.of("toc", "",
+        mojo.attributes = ImmutableMap.of("toc", "",
                 "linkcss!", "",
                 "source-highlighter", "coderay");
 
@@ -234,7 +247,7 @@ class AsciidoctorMojoTest {
         // when
         AsciidoctorMojo mojo = mockAsciidoctorMojo();
         mojo.backend = "html5";
-        mojo.attributes = Map.of("icons", "font");
+        mojo.attributes = ImmutableMap.of("icons", "font");
         mojo.embedAssets = true;
         mojo.sourceDirectory = srcDir;
         mojo.sourceDocumentName = "sample-embedded.adoc";
@@ -261,7 +274,7 @@ class AsciidoctorMojoTest {
         // when
         AsciidoctorMojo mojo = mockAsciidoctorMojo();
         mojo.backend = "html5";
-        mojo.attributes = Map.of("icons", "font");
+        mojo.attributes = ImmutableMap.of("icons", "font");
         mojo.embedAssets = true;
         mojo.sourceDirectory = srcDir;
         mojo.sourceDocumentName = "sample-embedded.adoc";
@@ -325,7 +338,7 @@ class AsciidoctorMojoTest {
         mojo.outputDirectory = outputDir;
         // IMPORTANT Maven can only assign string values or null, so we have to emulate the value precisely in the test!
         // Believe it or not, null is the equivalent of writing <toc/> in the XML configuration
-        mojo.attributes = Map.of("toc2", "true");
+        mojo.attributes = ImmutableMap.of("toc2", "true");
         mojo.execute();
 
         // then
@@ -348,7 +361,7 @@ class AsciidoctorMojoTest {
         mojo.outputDirectory = outputDir;
         // IMPORTANT Maven can only assign string values or null, so we have to emulate the value precisely in the test!
         // Believe it or not, null is the equivalent of writing <toc/> in the XML configuration
-        mojo.attributes = Map.of("toc2", "false");
+        mojo.attributes = ImmutableMap.of("toc2", "false");
         mojo.execute();
 
         // then
@@ -371,7 +384,7 @@ class AsciidoctorMojoTest {
         mojo.outputDirectory = outputDir;
         // IMPORTANT Maven can only assign string values or null, so we have to emulate the value precisely in the test!
         // Believe it or not, null is the equivalent of writing <toc/> in the XML configuration
-        mojo.attributes = Map.of("toc", "");
+        mojo.attributes = ImmutableMap.of("toc", "");
         mojo.execute();
 
         // then
@@ -403,7 +416,7 @@ class AsciidoctorMojoTest {
         mojo.outputDirectory = outputDir;
         mojo.preserveDirectories = true;
         mojo.relativeBaseDir = true;
-        mojo.attributes = Map.of("icons", "font");
+        mojo.attributes = ImmutableMap.of("icons", "font");
         mojo.execute();
 
         // then
@@ -444,7 +457,7 @@ class AsciidoctorMojoTest {
         mojo.outputDirectory = outputDir;
         mojo.preserveDirectories = true;
         mojo.relativeBaseDir = true;
-        mojo.attributes = Map.of("icons", "font");
+        mojo.attributes = ImmutableMap.of("icons", "font");
         mojo.execute();
 
         // then
@@ -531,7 +544,7 @@ class AsciidoctorMojoTest {
         mojo.preserveDirectories = true;
         mojo.baseDir = srcDir;
         //mojo.relativeBaseDir = true
-        mojo.attributes = Map.of("icons", "font");
+        mojo.attributes = ImmutableMap.of("icons", "font");
         mojo.execute();
 
         // then
@@ -571,7 +584,7 @@ class AsciidoctorMojoTest {
         mojo.outputDirectory = outputDir;
         mojo.preserveDirectories = false;
         mojo.relativeBaseDir = true;
-        mojo.attributes = Map.of("icons", "font");
+        mojo.attributes = ImmutableMap.of("icons", "font");
         mojo.execute();
 
         // then
@@ -782,7 +795,7 @@ class AsciidoctorMojoTest {
         mojo.sourceDocumentName = "sample-embedded.adoc";
         mojo.sourceDirectory = srcDir;
         mojo.outputDirectory = outputDir;
-        mojo.attributes = Map.of("icons", "font");
+        mojo.attributes = ImmutableMap.of("icons", "font");
         mojo.embedAssets = true;
         mojo.execute();
 
@@ -832,7 +845,7 @@ class AsciidoctorMojoTest {
         mojo.sourceDirectory = srcDir;
         mojo.sourceDocumentName = "imageDir.adoc";
         mojo.outputDirectory = outputDir;
-        mojo.attributes = Map.of("imagesdir", "custom-images-dir");
+        mojo.attributes = ImmutableMap.of("imagesdir", "custom-images-dir");
         mojo.execute();
 
         // then
@@ -852,7 +865,7 @@ class AsciidoctorMojoTest {
         mojo.sourceDocumentName = "attributes-example.adoc";
         mojo.sourceDirectory = srcDir;
         mojo.outputDirectory = outputDir;
-        mojo.attributes = Map.of(
+        mojo.attributes = ImmutableMap.of(
                 "plugin-configuration-attribute", "plugin configuration",
                 "execution-attribute", "execution configuration"
         );
@@ -872,7 +885,7 @@ class AsciidoctorMojoTest {
         File outputDir = newOutputTestDirectory("attributes");
         //  when
 
-        AsciidoctorMojo mojo = mockAsciidoctorMojo(Map.of("project.property.attribute", "project property configuration"));
+        AsciidoctorMojo mojo = mockAsciidoctorMojo(ImmutableMap.of("project.property.attribute", "project property configuration"));
         mojo.backend = "html5";
         mojo.sourceDocumentName = "attributes-example.adoc";
         mojo.sourceDirectory = srcDir;
@@ -897,7 +910,7 @@ class AsciidoctorMojoTest {
         mojo.sourceDocumentName = "sample.asciidoc";
         mojo.sourceDirectory = srcDir;
         mojo.outputDirectory = outputDir;
-        mojo.attributes = Map.of(
+        mojo.attributes = ImmutableMap.of(
                 "toc", "left",
                 "source-highlighter", "coderay");
         // replace some options
